@@ -59,7 +59,7 @@ external raise : exn -> 'a = "%raise"
            apply. The arguments are the location of the pattern-matching
            in the source code (file name, position of first character,
            position of last character). *)
-exception Assert_failure of (string * int * int)
+(*- exception Assert_failure of (string * int * int) *)
         (* Exception raised when an assertion fails.  The arguments are
            the location of the pattern-matching in the source code
            (file name, position of first character, position of last
